logout feature added + token_version handling in DB and JWT
